--- a/HW1/computational assignments/report/hw1.tex
+++ b/HW1/computational assignments/report/hw1.tex
@@ -77,7 +77,7 @@
 \setcounter{page}{1}
 
 \section{The Physical Problem}
-The physical problem at hand is the location of the flame front which depends on the point at which the fuel spray evaporates.
+Liquid rockets are an important part of the future of rocket engine propulsion. To maximize the efficiency of the engine, it is crucial to know the location of the evaporation front. The physical problem at hand is the location of the evaporation front of a fuel spray after the atomization injector. 
 
 \section{The Mathematical Model}
 The evaporation front of fuel spray can be described by solving the following equations:
@@ -126,36 +126,34 @@ In our case:
     \item $T_u=0.152$
     \item $\alpha\beta=0.0234$
 \end{itemize}
+To make sure that $\left.T\right|_{\zeta=0}=0$, we will solve the ODE in two steps, one from $\zeta\rightarrow-\infty$ to $\zeta=0$ and the second from $\zeta=0$ to $\zeta\rightarrow\infty$.
 
 \subsection{Finite Difference Method}
 Using central difference we can write the difference equations:
 \begin{equation}
-    \begin{array}{lcl}
-        \displaystyle\frac{T_{i+1}-2T_i+T_{i-1}}{h^2}+\Lambda e^{T_i}\frac{T_{i+1}-T_{i-1}}{2h}-\Lambda e^{T_i}\left(T_v-T_u+\alpha\beta\right)=0 & \begin{matrix}
-            i=1,2,\cdots,N \\\\
-            \displaystyle h=\frac{\left.\zeta\right|_{i=N+1}-\left.\zeta\right|_{i=0}}{N+1-0}
+    \begin{array}{c}
+        \displaystyle\frac{T_{i+1}-2T_i+T_{i-1}}{h^2}+\Lambda e^{T_i}\frac{T_{i+1}-T_{i-1}}{2h}-\Lambda e^{T_i}\left(T_v-T_u+\alpha\beta\right)=0 \hspace{1cm} \emph{O}\left(h^2\right) \\\\
+        \begin{matrix}
+            i=1,2,\cdots,N &&& \displaystyle h=\frac{\left.\zeta\right|_{i=N+1}-\left.\zeta\right|_{i=0}}{N+1-0}
         \end{matrix} 
     \end{array}
     \nomenclature{$h$}{size of each cell in the domain}
     \nomenclature{$i$}{cell index}
     \nomenclature{$N$}{number of elements}
 \end{equation}
-We will use the 'point Jacobi' method:
+We will use the 'explicit point Jacobi' method:
 \begin{enumerate}
     \item Set the filed with initial condition (linear interpolation).
     \item Calculate the temperature at index \emph{i} and time step \emph{n+1} from the previous time step:
     \begin{equation}
-        \begin{matrix}
-            \begin{array}{c}
-                \Lambda e^{T_i^{\left(n+1\right)}}=\frac{\displaystyle-\frac{T_{i+1}^{\left(n\right)}-2T_i^{\left(n\right)}+T_{i-1}^{\left(n\right)}}{h^2}}{\displaystyle\frac{T_{i+1}^{\left(n\right)}-T_{i-1}^{\left(n\right)}}{2h}-\left(T_v-T_u+\alpha\beta\right)} \\\\
-                \Downarrow \\\\
-                T_i^{\left(n+1\right)}=\displaystyle\ln\left(\frac{1}{\Lambda}\frac{\displaystyle-\frac{T_{i+1}^{\left(n\right)}-2T_i^{\left(n\right)}+T_{i-1}^{\left(n\right)}}{h^2}}{\displaystyle\frac{T_{i+1}^{\left(n\right)}-T_{i-1}^{\left(n\right)}}{2h}-\left(T_v-T_u+\alpha\beta\right)}\right)
-            \end{array} && i=1,2,\cdots,N
-        \end{matrix}
+        \begin{array}{c}
+            \displaystyle T_i^{n+1}=\frac{1}{2}\left(T_{i+1}^n+T_{i-1}^n\right)+\frac{h}{4}\Lambda e^{T_i^n}\left(T_{i+1}^n-T_{i-1}^n\right)-\frac{h^2}{2}\Lambda e^{T_i^n}\left(T_v-T_u+\alpha\beta\right)
+        \end{array}
     \end{equation}
     \item The solution is considered converged when:
     \begin{equation}
-        \left|y_i^{n+1}-y_i^n\right|<\varepsilon \hspace{1cm} \forall i\in[1, n]
+        \left|T_i^{n+1}-T_i^n\right|<\varepsilon \hspace{1cm} \forall i\in[1, N]
+        \nomenclature{$\varepsilon$}{convergence limit}
     \end{equation}
 \end{enumerate}
 
@@ -173,13 +171,13 @@ Let's rewrite Eq.\ref{eq: the ode} as a system of 2 ODE:
     \end{matrix}
     \nomenclature{$s$}{temporery variable}
 \end{equation}
-To solve the system of equations using the shooting method, we will guess $s_{(i=0)}^{(n)}$ and solve the system of equations using forward difference. Namely:
+To solve the system of equations using the shooting method, we will guess $s_{(i=0)}^{(n)}$ and solve the system of equations using forward and backward differences (semi-implicit Euler). Namely:
 \nomenclature{\fbox{$\cdot$}$^{(n)}$}{value at time step n}
 \begin{equation}
     \begin{matrix}
-        \left\{\begin{array}{lcl}
-            \displaystyle T_{i+1}^{(n)} & = & s_i^{(n)}\cdot h+T_i^{(n)} \\\\
-            \displaystyle s_{i+1}^{(n)} & = & \left(-\Lambda e^{T_i^{(n)}}s_i^{(n)}-\Lambda e^{T_i^{(n)}}\left(T_v-T_u+\alpha\beta\right)\right)\cdot h+s_i^{(n)}
+        \left\{\begin{array}{lclr}
+            \displaystyle s_{i+1}^{(n)} & = & \left(-\Lambda e^{T_i^{(n)}}s_i^{(n)}+\Lambda e^{T_i^{(n)}}\left(T_v-T_u+\alpha\beta\right)\right)\cdot h+s_i^{(n)} & \emph{O}\left(h\right)\\\\
+            \displaystyle T_{i+1}^{(n)} & = & s_i^{(n+1)}\cdot h+T_i^{(n)} & \emph{O}\left(h\right)
         \end{array}\right. & \begin{array}{l}
             s_{i=0}^n=s_0^n \\\\
             T_{i=0}^n=\zeta\cdot\left(T_v-T_u+\alpha\beta\right) \\\\
@@ -194,19 +192,175 @@ To correct the guess of $s_{(i=0)}^{(n)}$, let's define:
 \begin{itemize}
     \item When $F=0$, the guess of $s_{(i=0)}^{(n)}$ is correct
 \end{itemize}
-The next guess of \emph{s} $s_{(i=0)}^{(n+1)}$ we will use a numerical method to find the root of an equation. Namely:
+The next guess of \emph{s} $s_{(i=0)}^{(n+1)}$ will be calculated numerically by using a method to find the root of an equation. Namely:
 \begin{equation}
-    s_{(i=0)}^{(n+1)}=s_{(i=0)}^{(n)}-F_{\left(s_{(i=0)}^{(n)}\right)}\cdot\frac{s_{(i=0)}^{(n)}-s_{(i=0)}^{(n-1)}}{F_{\left(s_{(i=0)}^{(n)}\right)}-F_{\left(s_{(i=0)}^{(n-1)}\right)}}
+    s_{(i=0)}^{(n+1)}=s_{(i=0)}^{(n)}-F_{\left(s_{(i=0)}^{(n)}\right)}\cdot\frac{s_{(i=0)}^{(n)}-s_{(i=0)}^{(n-1)}}{F_{\left(s_{(i=0)}^{(n)}\right)}-F_{\left(s_{(i=0)}^{(n-1)}\right)}} \hspace{1cm}\emph{O}\left(h\right)
 \end{equation}
 
 \section{Influence of The Numerical Methods}
+\label{sec: Influence of The Numerical Methods}
+\subsection{Finite Difference Method}
+\subsubsection{Influence of number of elements N}
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/FD - T vs zeta for diff N.png}
+        \caption{Temperature as a Function of $\zeta$ for different N}
+        \label{fig: FD - T vs zeta for diff N}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/FD - n vs N.png}
+        \caption{Number of iterations as a function of N}
+        \label{fig: FD - n vs N}
+    \end{subfigure}
+    \caption{FD - Influence of the number of elements N}
+    \label{fig: FD - Influence of N}
+\end{figure}
+In Fig.\ref{fig: FD - T vs zeta for diff N} we can see that for N bigger than 100, the solution does not really change. From Fig.\ref{fig: FD - n vs N} we can see that as the number of elements increases, the number of iterations increases as well. We can conclude that $N=101$ is a sufficient number of elements.
 
+\subsubsection{Influence of convergence criteria $\varepsilon$}
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/FD - T vs zeta for diff epsilon.png}
+        \caption{Temperature as a Function of $\zeta$ for different $\varepsilon$}
+        \label{fig: FD - T vs zeta for diff epsilon}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/FD - n vs epsilon.png}
+        \caption{Number of iterations as a function of epsilon}
+        \label{fig: FD - n vs epsilon}
+    \end{subfigure}
+    \caption{FD - Influence of the convergence criteria $\varepsilon$}
+    \label{fig: FD - Influence of epsilon}
+\end{figure}
+From Fig.\ref{fig: FD - T vs zeta for diff epsilon} we can conclude that for a convergence criteria smaller than $1e^{-8}$, the solution stays the same. From Fig.\ref{fig: FD - n vs epsilon} we can determine that the number of iterations grows exponentially with the decrease of $\varepsilon$. With this two insights at hand, we can determine that $\varepsilon=1e^{-12}$ is a good choice (although it is not economical with the number of iterations).
+
+\subsection{Shooting Method}
+\subsubsection{Influence of number of elements N}
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - T vs zeta for diff N.png}
+        \caption{Temperature as a Function of $\zeta$ for different N}
+        \label{fig: shooting - T vs zeta for diff N}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - n vs N.png}
+        \caption{Number of iterations as a function of N}
+        \label{fig: shooting - n vs N}
+    \end{subfigure}
+    \caption{Shooting - Influence of the number of elements N}
+    \label{fig: shooting - Influence of N}
+\end{figure}
+In Fig.\ref{fig: shooting - T vs zeta for diff N} we can see that for N bigger than 100, the solution does not really change. From Fig.\ref{fig: shooting - n vs N} we can see that for more than 25 elements, the number of iterations stays constant for a certain convergence criteria and initial condition. We can conclude that $N=101$ is a sufficient number of elements.
+
+\subsubsection{Influence of convergence criteria $\varepsilon$}
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - T vs zeta for diff epsilon.png}
+        \caption{Temperature as a Function of $\zeta$ for different $\varepsilon$}
+        \label{fig: shooting - T vs zeta for diff epsilon}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - n vs epsilon.png}
+        \caption{Number of iterations as a function of epsilon}
+        \label{fig: shooting - n vs epsilon}
+    \end{subfigure}
+    \caption{Shooting - Influence of the convergence criteria $\varepsilon$}
+    \label{fig: shooting - Influence of epsilon}
+\end{figure}
+Figure \ref{fig: shooting - T vs zeta for diff epsilon} shows that for a convergence criteria smaller than $1e^{-6}$, the differences between the solutions are because of rounding errors. From Fig.\ref{fig: shooting - n vs epsilon} we can learn that the number of iterations does not change much for Different convergence criteria. We can determine that $\varepsilon=1e^{-12}$ is a good choice.
+
+\subsubsection{Influence of initial guess $s_0$}
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - n vs s0 - with negative.png}
+        \caption{}
+        \label{fig: shooting - n vs s0 - with negative}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - n vs s0 - no negative.png}
+        \caption{}
+        \label{fig: shooting - n vs s0 - no negative}
+    \end{subfigure}
+    \caption{Number of iterations as a function of initial guess}
+    \label{fig: shooting - Influence of s0}
+\end{figure}
+Figure \ref{fig: shooting - Influence of s0} shows that for different negative initial conditions, the number of iterations is not stable. Moreover, we can learn that the real initial slope is around 0.05, as this is the condition for which it took the least amount of steps to converge.
+
+\newpage
 \section{Results and Discussion}
+In the following section, the numerical solution for the ODE will be presented using the parameters chosen in the previous section (Sec.\ref{sec: Influence of The Numerical Methods}).
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/FD - T vs zeta.png}
+        \caption{FD - temperature as a function of $\zeta$}
+        \label{fig: FD - T vs zeta}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - T vs zeta.png}
+        \caption{shooting - temperature as a function of $\zeta$}
+        \label{fig: shooting - T vs zeta}
+    \end{subfigure}
+    \caption{Temperature as a function of $\zeta$}
+    \label{fig: T vs zeta}
+\end{figure}
+\noindent We can see in Fig.\ref{fig: T vs zeta} that there are no differences in the final result between the two methods. With the finite differences method, it took about 10,000 iterations to converge, while with the shooting method, it took only around 10 steps. On the left side of $\zeta=0$, the solution increases monotonically and faster than linearly. On the right side of $\zeta=0$, the solution increases linearly with $\zeta$.
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/FD - md vs zeta.png}
+        \caption{FD - mass fraction as a function of $\zeta$}
+        \label{fig: FD - md vs zeta}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[c]{0.49\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - md vs zeta.png}
+        \caption{shooting - mass fraction as a function of $\zeta$}
+        \label{fig: shooting - md vs zeta}
+    \end{subfigure}
+    \begin{subfigure}[c]{0.55\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/shooting - md vs zeta - no zero.png}
+        \caption{shooting - mass fraction as a function of $\zeta$ - no zero}
+        \label{fig: shooting - md vs zeta - no zero}
+    \end{subfigure}
+    \caption{Mass fraction as a function of $\zeta$}
+    \label{fig: md vs zeta}
+\end{figure}
+\noindent In Fig.\ref{fig: md vs zeta} we can see that indeed for $\zeta>0$, the temperature is linear as the mass fraction is constant and depends on the second derivative of the temperature. Moreover, the forced $\left.T\right|_{\zeta=0}=0$ creates an artificial peak in the mass fraction, which causes it to have a single discontinuity. Additionally, the left boundary condition is not met as the analytically calculated boundary conditions for the temperature are only correct when $\zeta\rightarrow\pm\infty$.
 
 \section{Summary and Conclusion}
 
 \newpage
 \appendix
 \section{Listing of The Computer Program}
+\subsection{Parameters}
+
+\subsection{Main Code}
 
 \end{document}
