--- a/HW2/theoretical question/NM_hw2_TQ.tex
+++ b/HW2/theoretical question/NM_hw2_TQ.tex
@@ -166,23 +166,23 @@ We can identify the the Taylor series of an exponential:
 The derivative can be substituted by using the following operators relation:
 \begin{equation}
     \begin{matrix}
-        \displaystyle \parder{}{x}=D_x=\frac{2}{h}\sinh^{-1}{\left(\frac{\delta_x}{2}\right)} && \displaystyle \parder{}{y}=D_y=\frac{2}{h}\sinh^{-1}{\left(\frac{\delta_y}{2}\right)} \\\\
-        \displaystyle \parder{^2}{x^2}=D_x^2=\frac{4}{h^2}\left(\sinh^{-1}{\left(\frac{\delta_x}{2}\right)}\right)^2 && \displaystyle \parder{^2}{y^2}=D_y^2=\frac{4}{h^2}\left(\sinh^{-1}{\left(\frac{\delta_y}{2}\right)}\right)^2
+        \displaystyle \parder{}{x}=D_x=\frac{2}{h_x}\sinh^{-1}{\left(\frac{\delta_x}{2}\right)} && \displaystyle \parder{}{y}=D_y=\frac{2}{h_y}\sinh^{-1}{\left(\frac{\delta_y}{2}\right)} \\\\
+        \displaystyle \parder{^2}{x^2}=D_x^2=\frac{4}{h_x^2}\left(\sinh^{-1}{\left(\frac{\delta_x}{2}\right)}\right)^2 && \displaystyle \parder{^2}{y^2}=D_y^2=\frac{4}{h_y^2}\left(\sinh^{-1}{\left(\frac{\delta_y}{2}\right)}\right)^2
     \end{matrix}
 \end{equation}
 The following equation is reached:
 \begin{equation}
-    \displaystyle u_{\left(x,y,t+\Delta t\right)}=\exp{\left[\frac{4\Delta t}{h^2}\left(\left(\sinh^{-1}{\left(\frac{\delta_x}{2}\right)}\right)^2+\left(\sinh^{-1}{\left(\frac{\delta_y}{2}\right)}\right)^2\right)\right]}u_{\left(x,y,t\right)}
+    \displaystyle u_{\left(x,y,t+\Delta t\right)}=\exp{\left[\frac{4\Delta t}{h_x^2}\left(\sinh^{-1}{\left(\frac{\delta_x}{2}\right)}\right)^2+\frac{4\Delta t}{h_y^2}\left(\sinh^{-1}{\left(\frac{\delta_y}{2}\right)}\right)^2\right]}u_{\left(x,y,t\right)}
 \end{equation}
 To further simplify, we will expand the hyperbolic sin into it's Taylor series:
 \begin{equation}
-    \displaystyle u_{\left(x,y,t+\Delta t\right)}=\exp{\left[\frac{4\Delta t}{h^2}\left(\left(\frac{\delta_x}{2}-\frac{1}{3!}\left(\frac{\delta_x}{2}\right)^3+\cdots\right)^2+\left(\frac{\delta_y}{2}-\frac{1}{3!}\left(\frac{\delta_y}{2}\right)^3+\cdots\right)^2\right)\right]}u_{\left(x,y,t\right)}
+    \displaystyle u_{\left(x,y,t+\Delta t\right)}=\exp{\left[\frac{4\Delta t}{h_x^2}\left(\frac{\delta_x}{2}-\frac{1}{3!}\left(\frac{\delta_x}{2}\right)^3+\cdots\right)^2+\frac{4\Delta t}{h_y^2}\left(\frac{\delta_y}{2}-\frac{1}{3!}\left(\frac{\delta_y}{2}\right)^3+\cdots\right)^2\right]}u_{\left(x,y,t\right)}
 \end{equation}
 Now let's expand the exponent:
 \begin{equation}
     \begin{array}{rcl}
-        \displaystyle u_{\left(x,y,t+\Delta t\right)} & = & \displaystyle \left[1+\frac{4\Delta t}{h^2}\left(\left(\frac{\delta_x}{2}-\frac{1}{3!}\left(\frac{\delta_x}{2}\right)^3+\cdots\right)^2+\left(\frac{\delta_y}{2}-\frac{1}{3!}\left(\frac{\delta_y}{2}\right)^3+\cdots\right)^2\right)\right. \\\\
-        && \displaystyle +\left.\frac{1}{2!}\frac{16\Delta t^2}{h^4}\left(\left(\frac{\delta_x}{2}-\frac{1}{3!}\left(\frac{\delta_x}{2}\right)^3+\cdots\right)^2+\left(\frac{\delta_y}{2}-\frac{1}{3!}\left(\frac{\delta_y}{2}\right)^3+\cdots\right)^2\right)^2\right]u_{\left(x,y,t\right)}\quad\blacksquare
+        \displaystyle u_{\left(x,y,t+\Delta t\right)} & = & \displaystyle \left[1+\frac{4\Delta t}{h_x^2}\left(\frac{\delta_x}{2}-\frac{1}{3!}\left(\frac{\delta_x}{2}\right)^3+\cdots\right)^2+\frac{4\Delta t}{h_y^2}\left(\frac{\delta_y}{2}-\frac{1}{3!}\left(\frac{\delta_y}{2}\right)^3+\cdots\right)^2\right. \\\\
+        && \displaystyle +\left.\frac{1}{2!}\left(\frac{4\Delta t}{h_x^2}\left(\frac{\delta_x}{2}-\frac{1}{3!}\left(\frac{\delta_x}{2}\right)^3+\cdots\right)^2+\frac{4\Delta t}{h_y^2}\left(\frac{\delta_y}{2}-\frac{1}{3!}\left(\frac{\delta_y}{2}\right)^3+\cdots\right)^2\right)^2\right]u_{\left(x,y,t\right)}\quad\blacksquare
     \end{array}
 \end{equation}
 
@@ -190,10 +190,76 @@ Now let's expand the exponent:
 From the this infinite Taylor series we can derive a lot of approximations. For example we could take only the elements up to the order of $\delta_x^2$ or $\delta_y^2$: 
 \begin{equation}
     \begin{array}{rcl}
-        \displaystyle u_{\left(u,y,t+\Delta t\right)} & = & \displaystyle \left[1+\frac{4\Delta t}{h^2}\left(\frac{\delta_x^2}{4}+\frac{\delta_y^2}{4}\right)\right]u_{\left(x,y,t\right)} \\\\
-        \displaystyle u_{i,j,k+1} & = & \displaystyle \left[1+\frac{\Delta t}{h^2}\left(\delta_x^2+\delta^2_y\right)\right]u_{i,j,k} \\\\
-        \displaystyle u_{i,j,k+1} & = & a
+        \displaystyle u_{\left(u,y,t+\Delta t\right)} & = & \displaystyle \left[1+\left(\frac{4\Delta t}{h_x^2}\frac{\delta_x^2}{4}+\frac{4\Delta t}{h_y^2}\frac{\delta_y^2}{4}\right)\right]u_{\left(x,y,t\right)} \\\\
+        \displaystyle u_{i,j,k+1} & = & \displaystyle \left[1+\frac{\Delta t}{h_x^2}\delta_x^2+\frac{\Delta t}{h_y^2}\delta^2_y\right]u_{i,j,k} \\\\
+        \displaystyle u_{i,j,k+1} & = & \displaystyle u_{i,j,k}+R_x\left(u_{i-1,j,k}-2u_{i,j,k}+u_{i+1,j,k}\right)+R_y\left(u_{i,j-1,k}-2u_{i,j,k}+u_{i,j+1k}\right)\quad\blacksquare
     \end{array}
 \end{equation}
+\begin{itemize}
+    \item $\displaystyle R_x=\frac{\Delta t}{h_x^2}$
+    \item $\displaystyle R_y=\frac{\Delta t}{h_y^2}$
+\end{itemize}
+
+\section{Q4}
+The next equation is given:
+\begin{equation}
+    \parder{U}{t}=\parder{^2U}{x^2}
+\end{equation}
+With the following boundary and initial conditions:
+\begin{equation}
+    \begin{matrix}
+        \begin{array}{rcl}
+            \displaystyle U_{\left(0,t\right)} & = & 0 \\\\
+            \displaystyle \parder{U_{\left(1,t\right)}}{x} & = & M
+        \end{array} && U_{\left(x,0\right)}={U_0}_{\left(x\right)}
+    \end{matrix}
+\end{equation}
+In order to solve this equation we will use forward differencing in time and central differencing in space:
+\begin{equation}
+    u_{i,j+1}=u_{i,j}+R\left(u_{i-1,j+1}-2u_{i,j+1}+u_{i+1,j+1}\right)
+\end{equation}
+By rearranging we get:
+\begin{equation}
+    \underbrace{\left(-R\right)}_{\alpha_{i,j}} u_{i-1,j+1}+\underbrace{\left(1+2R\right)}_{\beta_{i,j}} u_{i,j+1}+\underbrace{\left(-R\right)}_{\gamma_{i,j}} u_{i+1,j+1}=\underbrace{u_{i,j}}_{RHS_{i,j}}
+\end{equation}
+There is no problem to solve the equations for $i=1,2,\cdots N$ but in the equation at $i=N+1$ we don't know $i=N+2$. We will use the boundary condition on the derivative at $i+N+1$. We will use central differencing to write the derivative:
+\begin{equation}
+    \begin{array}{c}
+        \displaystyle \parder{u_{N+1,j}}{x}=\frac{1}{2h}\left(u_{N+2,j}-u_{N,j}\right)=M \\\\
+        \displaystyle u_{N+2,j}=2hM+u_{N,j}
+    \end{array}
+\end{equation}
+In matrix form we get:
+\begin{equation}
+    \begin{pmatrix}
+        \beta_1,j & \gamma_1,j & 0 & \cdots & \cdots & \cdots & 0 \\
+        \alpha_2,j & \beta_2,j & \gamma_2,j & 0 & \cdots & \cdots & 0 \\
+        0 & \ddots & \ddots & \ddots & 0 & \cdots & 0 \\
+        0 & 0 & \alpha_i & \beta_i & \gamma_i & 0 & 0 \\
+        0 & \cdots & 0 & \ddots & \ddots & \ddots & 0 \\
+        0 & \cdots & \cdots & 0 & \alpha_{N,j} & \beta_{N,j} & \gamma_{N,j} \\
+        0 & 0 & \cdots & \cdots & 0 & \alpha_{N+1,j}+\gamma_{N+1,j} &\beta_{N+1,j}
+    \end{pmatrix}
+    \begin{pmatrix}
+        u_{1,j+1} \\
+        u_{2,j+1} \\
+        \cdots \\
+        \cdots \\
+        \cdots \\
+        u_{N,j+1} \\
+        u_{N+1,j+1}
+    \end{pmatrix}
+    =
+    \begin{pmatrix}
+        RHS_{1,j}-\alpha_{0,j}\cdot u_{0,j} \\
+        RHS_{2,j} \\
+        \cdots \\
+        \cdots \\
+        \cdots \\
+        RHS_{N,j} \\
+        RHS_{N+1,j}-\gamma_{N+1,j}\cdot2hM
+    \end{pmatrix}
+\end{equation}
+Using Thomas algorithm we would get a direct result for the $u_j$.
 
 \end{document}
